--- a/styles.css
+++ b/styles.css
@@ -255,5 +255,18 @@ header .title p {
     padding: 16px 32px;
   }
 
+}
+
+@media only screen and (max-width: 768px) {
+
+  /* Universal */
+
+  body {
+    padding: 16px;
+  }
+
+  section {
+    padding: 24px 0;
+  }
 
 }
