--- a/styles.css
+++ b/styles.css
@@ -220,7 +220,9 @@ header .title {
   padding-bottom: 40px;
 }
 
-
+ol + ol {
+  margin-top: 40px;
+}
 
 
 @media only screen and (max-width: 1024px) {
